--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,18 @@
 .godot/
 /android/
 
+# Godot-specific ignores
+.import/
+export.cfg
+export_presets.cfg
+
+# Imported translations (automatically generated from CSV files)
+*.translation
+
+# Mono-specific ignores
+.mono/
+data_*/
+mono_crash.*.json
+
 *blend[0-9]*
-*.import*
 *_dev.tscn
